r48:
+ Corrected an error in rayCastClosestHitTest function

r47:
+ Added rayCastClosestHitTest function.

r46:
+ Added Bullet Multithread Support, activable by using createMultithreadedBulletManager function instead of createBulletManager [BETA - MEMORY LEAKS PRESENT, use at your own risk]

r45:
+ Added activate function to Rigid Body class, to force body activation.
+ Removed unused pointer from the bullet's rigid body. Unused since CMotionState class introduction.

r44:
+ Modified contactPoint structure
+ Added rayCastTest method in CIrrBPWorld class (beta)

r43:
+ Fixed Code::Blocks Project

IrrBP 0.31-Release (r42):
+ Added 6DOF Constraint
+ New Constructor for the cone twist constraint
+ Improved Slide Constraint
+ LINUX PACKAGE ADDED

IrrBP 0.31 (r41):
+ Fixed linux path issue
+ Created new download package for linux

r40:
+ Fixed setRotation() and getRotation() methods. [issue 4]
+ Fixed body collding test functions. [issue 5]
+ Increased rotation precision by introducing a new conversion method, based on matrix.

r39:
+ Added isPairColliding method to test collision between two objects.

r38:
+ Fixed a memory bug in the CIrrBPWorld class. It caused a heap corruption after inserting a constraint.

r37:
+ Added setDeactivation function in rigidBody class, so the user can manually set the deactivation flag of a body.

IrrBP 0.30 Final (r36):
+ Updated irrBP Project with actions folder

IrrBP 0.30 (r35):
+ Updated documentation (in the downloadable package)
+ Added support to Physics Action 
+ Added Raycast Vehicle support.

r34:
+ Fixed RigidBody setPosition() method
+ Added setRotation() method in Rigid Body class

r33:
+ Fixed mesh->clear() function missing bug. The function was only implemented in SVN Versions of irrlicht
+ Fixed header include folder, to cleanly compile irrBP on other platforms (thanks to serengeor).
+ Added Code::Blocks Project File (thanks to serengeor).

r32:
+ Minor documentation bugfix.

r31: